1- Fix y-axe scroll in menu list collapsed

--- a/client/src/containers/Dashboard/Dashboard.less
+++ b/client/src/containers/Dashboard/Dashboard.less
@@ -9,3 +9,10 @@
 .ant-layout {
   transition: all .2s;
 }
+
+.ant-layout-sider-collapsed {
+  flex: 0 0 81px !important;
+  max-width: 81px !important;
+  min-width: 81px !important;
+  width: 81px !important;
+}
