--- a/client/src/containers/Dashboard/Dashboard.module.less
+++ b/client/src/containers/Dashboard/Dashboard.module.less
@@ -27,6 +27,9 @@
   position: fixed;
   left: 0;
   border-right: 1px #ddd solid;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 .Header {
@@ -36,5 +39,8 @@
   z-index: 1;
   width: 100%;
   border-bottom: 1px #ddd solid;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 
 }
